@@ -11,6 +11,10 @@ class TestGemCommandsSourcesCommand < RubyGemTestCase
     @new_repo = "http://beta-gems.example.com"
   end
 
+  def test_initialize_proxy
+    assert @cmd.handles?(['--http-proxy', 'http://proxy.example.com'])
+  end
+
   def test_execute
     util_setup_spec_fetcher
     @cmd.handle_options []
@@ -244,7 +248,7 @@ Will cause RubyGems to revert to legacy indexes, degrading performance.
     assert_equal "source cache successfully updated\n", @ui.output
     assert_equal '', @ui.error
   end
- 
+
   def test_execute_update_legacy
     @cmd.handle_options %w[--update]
 
@@ -269,6 +273,6 @@ source cache successfully updated
     assert_equal expected, @ui.output
     assert_equal '', @ui.error
   end
- 
+
 end
 
